# fire-crab

./: Cargo.toml  README.md
bench/: compare.sh
crates/fcstat/: Cargo.toml
crates/fcstat/src/: main.rs
crates/ods/: Cargo.toml
crates/ods/src/: blr.rs  btr.rs  catalog.rs  data.rs  format.rs  gc.rs  header.rs  lib.rs  pages.rs  pip.rs  pointer.rs  sqz.rs  tip.rs  tra.rs
crates/wire/: Cargo.toml
crates/wire/src/: crypto.rs  lib.rs  main.rs  server.rs  srp.rs
docs/: methodology.md  qa-and-benchmarks.md  subsystem-map.md
qa/: diff-blr.sh  diff-gstat.sh  diff-index.sh  diff-login.sh  diff-mvcc.sh  diff-query.sh  diff-rows.sh  diff-select.sh  diff-sweep.sh  diff-wire-select.sh  diff-wire.sh  serve-real-client.sh  serve-real-groupby.sh  serve-real-orderagg.sh  serve-real-project.sh  serve-real-query.sh  serve-real-where.sh
